--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
 	repositories {
 		gradlePluginPortal()
-		maven { url "https://repo.spring.io/plugins-release" }
+		maven { url "https://maven.aliyun.com/repository/spring-plugin" }
 	}
 	dependencies {
 		classpath("io.spring.gradle:propdeps-plugin:0.0.9.RELEASE")
@@ -20,7 +20,7 @@ plugins {
 	id "org.asciidoctor.convert" version "1.5.6"
 }
 
-buildScan {
+   buildScan {
 	licenseAgreementUrl = "https://gradle.com/terms-of-service"
 	licenseAgree = "yes"
 }
@@ -152,6 +152,10 @@ configure(allprojects) { project ->
 	}
 
 	repositories {
+		// 配置国内镜像源
+		maven{ url 'https://maven.aliyun.com/repository/public' }
+		maven{ url 'https://maven.aliyun.com/repository/spring-plugin' }
+		maven{ url 'https://maven.aliyun.com/repository/gradle-plugin' }
 		mavenCentral()
 		maven { url "https://repo.spring.io/libs-spring-framework-build" }
 	}
